# constrainedrandom

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  constrainedrandom.py  examples.py  pyproject.toml  test.py
benchmarks/: README.md  __main__.py  benchmark_utils.py
benchmarks/pyvsc/: basic.py  in_keyword.py  ldinstr.py  randlist.py
constrainedrandom/: __init__.py  bits.py  debug.py  randobj.py  random.py  types.py  utils.py
constrainedrandom/internal/: constants.py  multivar.py  randvar.py  vargroup.py
docs/: conf.py  constrainedrandom.rst  examples.rst  howto.rst  index.rst  intro.rst  requirements.txt
examples/: ldinstr.py
tests/: README.md  __main__.py  bits.py  determinism.py  is_pure.py  main.py  perf_utils.py  plot_perf_results.py  test_args.py  testutils.py  utils.py
tests/features/: basic.py  classes.py  errors.py  rand_list.py  temp.py  user.py
